BEE-1 Partition distribute GET and DELETE endpoint added
